--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "bot.js",
   "author": "Adamon",
   "dependencies": {
-    "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
     "discord.js": "^11.4.2",
     "enmap": "^4.3.2",
-    "fs": "0.0.1-security",
-    "winston": "^3.1.0"
+    "fs": "0.0.1-security"
   },
   "scripts": {
     "start": "node trinity_bot.js"
